--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h3> <span> Qualification : </span> B.Tech(Chemical Engineering) </h3>
         <h3> <span> Post : </span> Front End Developer </h3>
         <h3> <span> Languages Known : </span> Marathi, Hindi, English </h3>
-        <a href="#"><button class="btn"> Download CV <i class="fas fa-download"></i> </button></a>
+        <a href="images/Pratik Resume.pdf"><button class="btn"> Download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
